# fastapi-auth-jwt-cookie

./: .gitignore  pyproject.toml
src/: database.py  main.py
src/alembic/: env.py
src/auth/: auth_jwt.py  dependencies.py  schemas.py  utils.py
src/auth/database/: models.py  utils.py
